# winbolo

./: .gitignore
brains/braintemplate/: brain.h  braintemplate.c
brains/vfwspeilborg/: brain.h  directxavi.h
winbolo/docs/: WinBoloInfoPacket.c
winbolo/docs/Brains/: Brain.h  BrainTemplate.c  resource.h
winbolo/src/: .clang-format-ignore  .clang-tidy  CMakeLists.txt
winbolo/src/bolo/: CMakeLists.txt  alliance.cc  alliance.h  allience.c  allience.cc  allience.h  backend.c  backend.cc  backend.h  bases.c  bases.cc  bases.h  bolo_map.c  bolo_map.cc  bolo_map.h  brain.h  building.c  building.cc  building.h  client.h  crc.c  crc.cc  crc.h  debug_file_output.c  debug_file_output.cc  debug_file_output.h  explosions.c  explosions.cc  explosions.h  floodfill.c  floodfill.cc  floodfill.h  frontend.h  gametype.c  gametype.cc  gametype.h  global.c  global.h  grass.c  grass.cc  (+103 more)
winbolo/src/gui/: Input.h  Winutil.h  aresource.h  brainsHandler.h  clientmutex.cc  clientmutex.h  currentgames.h  cursor.h  dialogAbout.h  dialogAlliance.h  dialogGameFinder.h  dialogGameInfo.h  dialogGameSetup.h  dialogKeySetup.h  dialogLanguages.h  dialogMessages.h  dialogNetworkInfo.h  dialogOpening.h  dialogPassword.h  dialogSetName.h  dialogSystemInfo.h  dialogTrackerSetup.h  dialogUDPSetup.h  dialogWinbolonet.h  dialogskins.h  dnsLookups.h  draw.h  dsutil.h  font.h  gamefront.h  lang.h  linresource.h  mappreview.h  netclient.h  positions.h  resource.h  skins.h  sound.h  tiles.h  winbolo.h
winbolo/src/gui/linux/: CMakeLists.txt  Makefile  background.xph  boloicon.xpm  bolosounds.h  brainshandler.c  brainshandler.cc  clientmutex.c  clientmutex.cc  cursor.c  cursor.cc  cursor.h  dialogabout.c  dialogabout.cc  dialogabout.h  dialogalliance.c  dialogalliance.cc  dialogalliance.h  dialoggamefinder.c  dialoggamefinder.cc  dialoggamefinder.h  dialoggameinfo.c  dialoggameinfo.cc  dialoggameinfo.h  dialoggamesetup.c  dialoggamesetup.cc  dialoggamesetup.h  dialogkeysetup.c  dialogkeysetup.cc  dialogkeysetup.h  dialogmessages.c  dialogmessages.cc  dialogmessages.h  dialognetworkinfo.c  dialognetworkinfo.cc  dialognetworkinfo.h  dialogopening.c  dialogopening.cc  dialogopening.h  dialogpassword.c  (+54 more)
winbolo/src/gui/win32/: currentgames.c  currentgames.cc  cuursor.c  dialogAlliance.c  dialogGameFinder.c  dialogKeySetup.c  dialogMessages.c  dialogNetworkInfo.c  dialogOpening.c  dnslookups.c  draw.c  input.c  resource.h  win32resource.h  winbolo.c  winutil.c
winbolo/src/logviewer/: Sound.c  backend.h
winbolo/src/lzw/: CMakeLists.txt  dcodlzw.c  ecodlzw.c  lzw.h
winbolo/src/server/: CMakeLists.txt  Makefile  resource.h  rsaalgorithm.h  serverclient.cc  servercore.c  servercore.cc  servercore.h  serverfrontend.c  serverfrontend.cc  serverfrontend.h  servermain.c  servermain.cc  servermessages.cc  servernet.c  servernet.cc  servernet.h  servertransport.c  servertransport.cc  servertransport.h  threads.c  threads.cc  threads.h
winbolo/src/server/BigDigits/: CMakeLists.txt  bigd.c  bigdigits.c
winbolo/src/server/win32/: resource.h  servertransport.c
winbolo/src/winbolonet/: http.c  http.cc  http.h  winbolonet.c  winbolonet.cc  winbolonet.h  winbolonetevents.c  winbolonetevents.cc  winbolonetevents.h  winbolonetthread.c  winbolonetthread.cc  winbolonetthread.h
