cmake_minimum_required(VERSION 3.10)

add_executable(linbolods
               serverclient.cc
               servercore.cc
               serverfrontend.cc
               servermain.cc
               servermessages.cc
               servernet.cc
               servertransport.cc
               threads.cc
               ../bolo/allience.cc
               ../bolo/backend.cc
               ../bolo/bases.cc
               ../bolo/bolo_map.cc
               ../bolo/crc.cc
               ../bolo/debug_file_output.cc
               ../bolo/gametype.cc
               ../bolo/lgm.cc
               ../bolo/log.cc
               ../bolo/mathWinbolo.cc
               ../bolo/netmt.cc
               ../bolo/netplayers.cc
               ../bolo/netpnb.cc
               ../bolo/pillbox.cc
               ../bolo/players.cc
               ../bolo/playersrejoin.cc
               ../bolo/screenbrainmap.cc
               ../bolo/screencalc.cc
               ../bolo/shells.cc
               ../bolo/starts.cc
               ../bolo/tank.cc
               ../bolo/tankexp.cc
               ../bolo/udppackets.cc
               ../winbolonet/http.cc
               ../winbolonet/winbolonet.cc
               ../winbolonet/winbolonetevents.cc
               ../winbolonet/winbolonetthread.cc
               ../gui/linux/preferences.cc
               ../gui/linux/lang.cc
               )

include_directories(${MINIZIP_LIBRARIES})
include_directories(${SDL_INCLUDE_DIRS})
target_link_libraries(linbolods PRIVATE
                      bd
                      bolo
                      lzw
                      ${MINIZIP_LIBRARIES}
                      ${SDL_LIBRARIES}
                      m)
